--- a/_dl/2020-06-26-entropy.md
+++ b/_dl/2020-06-26-entropy.md
@@ -184,6 +184,8 @@ H(p, q)=-\sum_{i=1}^{n} p_{i} \log_a q_{i}
 H(p, q)=-\int_{\mathbb{X}} p(x) \log_a q(x) d(x)
 \\]
 
+Như vậy, cross-entropy đóng vai trò là độ đo sự khác biệt của hai phân bố xác suất.
+
 Ở bài này, tôi chỉ thông qua các tính chất của cross-entropy với phân bố rời rạc.
 
 **Một số tính chất**
@@ -243,6 +245,8 @@ mse loss:  0.13494490799999997
 Từ đó, thấy rằng loss của cross entropy cao hơn so với loss của mse, tức là cross entropy phạt nặng hơn so với mse. Xin mở rộng thêm bằng minh họa sau (ảnh lấy từ [mlcb-softmax](https://machinelearningcoban.com/2017/02/17/softmax/))
 
 <img src="{% link _dl/cross_entropy.png %}" text-align="center">
+
+Như vậy, có thể rút ra một nhận xét: cross-entropy là ha
 
 Nếu có thời gian, tôi sẽ sửa và viết tiếp bài này, các phần tôi muốn viết là
 1. Độ đo Kullback–Leibler divergence và các vấn đề liên quan
