--- a/_dl/2020-06-26-entropy.md
+++ b/_dl/2020-06-26-entropy.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: entropy trong lý thuyết thông tin
+title: Entropy Trong Lý Thuyết Thông Tin
 subtitle: Từ thống kê đến học máy
 # color: turquoise
 feature-img: assets/dl_posts/entropy/entropy4.jpg
@@ -184,7 +184,7 @@ H(p, q)=-\sum_{i=1}^{n} p_{i} \log_a q_{i}
 H(p, q)=-\int_{\mathbb{X}} p(x) \log_a q(x) d(x)
 \\]
 
-Như vậy, cross-entropy đóng vai trò là độ đo sự khác biệt của hai phân bố xác suất.
+Như vậy, cross-entropy đóng vai trò là độ đo sự khác biệt của hai phân bố xác suất. Người ta hay dùng cross-entropy làm hàm mất mát trong mô hình phân loại.
 
 Ở bài này, tôi chỉ thông qua các tính chất của cross-entropy với phân bố rời rạc.
 
@@ -201,12 +201,14 @@ Từ đây \\(H(p,q)\ge -\sum_{x} p(x) \log _{a} p(x) = H(p)\\).
 - cross-entropy không có tính đối xứng do \\(H(p,q)\ne H(q,p)\\) nên nó không phải là một khoảng cách mêtric. Trong các bài toán thì độ đọ \\(H(p,q)\\) thường được dùng với \\(p\\) là phân bố đùng cần dự đoán, phân bố \\(q\\) là phân bố mà mô hình hiện tại đang dự đoán, tối tiểu hàm này để cải thiện mô hình.
 - cross-entropy khi dùng như hàm mất mát, hàm này phạt rất nặng khi xác suất \\(p_i\\) lớn nhưng \\(q_i\\) nhỏ, lý do là hàm \\(-\log_b x\\) tăng rất nhanh khi \\(x\\) tiến về \\(0\\). Có thể hiểu qua ví dụ sau.
 
-Giả sử đầu ra của bài toán phân loại chó hoặc không phải chó \\(5\\) ảnh (dòng 2 là xác suất bức ảnh là chó mà mô hình đưa ra, dòng 3 là nhãn cho ảnh thật (1: chó, 0: không phải chó)). 
+Với bài toán phân loại chó hoặc không phải chó, dòng 1 là các ảnh đang xét, dòng 2 là xác suất bức ảnh là chó mà mô hình đưa ra, dòng 3 là nhãn cho ảnh thật (1: chó, 0: không phải chó)). 
 
 | image 1 | image 2 | image 3 | image 4 | image 5 |
 |:-------:|:-------:|:-------:|:-------:|:-------:|
 |  0.7654 |  0.1223 |  0.9645 |  0.6319 |  0.3614 |
 |    1    |    0    |    1    |    1    |    0    |
+
+Tiến hành lập trình bằng Python như sau
 
 ```python
 import numpy as np 
@@ -230,6 +232,7 @@ def cross_entropy(p,q):
 	n = len(p)
 	return - np.sum(p*np.log(q))/n
 
+# Mean square error function
 def MSE(p,q):
 	n = len(p)
 	return np.sum([(p[i]-q[i])**2 for i in range(len(p))])/n
@@ -242,11 +245,11 @@ Kết quả thu được
 cross entropy loss:  0.2682907411830272
 mse loss:  0.13494490799999997
 ```
-Từ đó, thấy rằng loss của cross entropy cao hơn so với loss của mse, tức là cross entropy phạt nặng hơn so với mse. Xin mở rộng thêm bằng minh họa sau (ảnh lấy từ [mlcb-softmax](https://machinelearningcoban.com/2017/02/17/softmax/))
+Từ đó, thấy rằng loss của cross entropy cao hơn so với loss của mse, tức là cross entropy phạt nặng hơn so với mse. Xin có một mở rộng thêm bằng minh họa sau, có thể thấy ngay rằng loss của cross-entropy luôn lớn hơn loss của mse với các giá trị \\(p\\) cố định (ảnh lấy từ [mlcb-softmax](https://machinelearningcoban.com/2017/02/17/softmax/)).
 
 <img src="{% link _dl/cross_entropy.png %}" text-align="center">
 
-Như vậy, có thể rút ra một nhận xét: cross-entropy là ha
+
 
 Nếu có thời gian, tôi sẽ sửa và viết tiếp bài này, các phần tôi muốn viết là
 1. Độ đo Kullback–Leibler divergence và các vấn đề liên quan
@@ -255,7 +258,7 @@ Nếu có thời gian, tôi sẽ sửa và viết tiếp bài này, các phần 
 Cảm ơn bạn đã đọc đến đây, nếu có nhận xét hay góp ý nào, bạn comment ở dưới hoặc thông tin cho tôi qua mail nhé. Mến chào bạn.
 
 # Tài liệu tham khảo
-[1] [Ly thuyet thong tin](https://thetalog.com/statistics/ly-thuyet-thong-tin/)
+[1] [Lý thuyết thông tin](https://thetalog.com/statistics/ly-thuyet-thong-tin/)
 
 [2] [Information theory](https://en.wikipedia.org/wiki/Entropy_(information_theory))
 
